assets/stylesheets/timetable.css
@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
* {font-family:'Nanum Gothic', serif,verdana; font-weight:normal;}
body {padding-top:56px;}

.selected-semester-li {background-color:#ccf;}

#facebook_like_li {line-height:2.5;}
#brand_button {font-weight:bold;font-size:24px;color:#153888;}

.label{color:#555;}
.label:hover {color:#000;}
.label:active {color:#000;}

.big_label {color:#555;}
.big_label :hover {color:#000;}
.big_label :active {color:#000;}

.label-info {background-color:#aaddff;}


#search_form {padding:3px;margin-bottom:10px;}
#search_cond_table {width:100%;display:table;}

#search_btns {display:table-row;}
@media (min-width:768px) {
	#search_cond_table {width:70%;}
}

.child {display:table-cell;}
#search_type {width:93px;padding-right:3px;}
#search_input_container {padding-right:6px;}
input#search_query_text {width:100%;padding:3px 5px;vertical-align:middle;}
#search_button_container {width:52px;margin-bottom:2px;}
button.btn.well {padding:6px 12px;margin:0px;border:1px solid #aaa;}

.search-result-table th {text-align:center;}
.search-result-table td {vertical-align:middle;font-size:9pt;}
.search-result-table .classification {width:5%;text-align:center;}
.search-result-table .department {width:10%;text-align:center;}
.search-result-table .academic-year {width:5%;text-align:center;}
.search-result-table .course-number {width:8%;text-align:center;}
.search-result-table .lecture-number {width:6%;text-align:center;}
.search-result-table .credit {width:6%;text-align:center;}
.search-result-table .course-title {width:25%;}
.search-result-table .quota {width:5%;text-align:center;}
.search-result-table .class-time {width:10%;text-align:center;}
.search-result-table .instructor {width:5%;text-align:center;overflow:hidden;}
.search-result-table .location {width:5%;text-align:center;}
.search-result-table .remark {width:15%;text-align:center;}
.search-result-table tbody tr {cursor:pointer;}
#lectures_content {min-height:50px;max-height:105px;overflow:scroll;overflow-x:hidden;border:1px solid #ccc;}
@media (min-height:600px) {
	#lectures_content {max-height: 130px}
}
@media (min-height:702px) {
	#lectures_content {max-height: 145px}
}
@media (min-height:804px) {
	#lectures_content {max-height: 160px}
}
@media (min-height:906px) {
	#lectures_content {max-height: 180px}
}
@media (min-height:1008px) {
	#lectures_content {max-height: 200px}
}
@media (min-height:1110px) {
	#lectures_content {max-height: 220px}
}
@media (min-height:1212px) {
	#lectures_content {max-height: 240px}
}
#timetable_container {margin-top:10px;}


#timetable th.visible-xs {font-size:13px;}
#search_result_table tr.selected {background-color:#ccf}
#my_courses_table tr.selected {background-color:#ccf}
#timetable {width:100%;}
#timetable th, #timetable td{text-align:center;vertical-align:middle;border:1px solid #ddd;border-right:1px solid #f3f3f3;padding:0;}
#timetable tr td:last-child, #timetable tr th:last-child{border-right:1px solid #ddd;}
#timetable .halftimetr td{border-top:1px dashed #ddd;}
#timetable tr:not(.halftimetr) td{border-bottom-style:none;}
#timetable thead th {height:30px;}
#timetable tbody th {width:10%;padding:2px;line-height:1.3}
#timetable tbody td {height:18px;}
#timetable .period {font-size:1.2em;}
#timetable .time {font-size:0.8em;}
.timecell-container {position:absolute;z-index:100;}
.timecell {position:relative;border-style:none;border-radius:8px;text-align:center;cursor:pointer;}
.timecellinfo-containter{position:relative;top:50%;-webkit-transfrom:translateY(-50%); -ms-transfrom: translateY(-50%); transform:translateY(-50%);}
#customcell_container {position:absolute;z-index:101;pointer-events:none;}
#customcell {font-size:11px;position:relative;border:2px dotted #f00;text-align:center;z-index:200;pointer-events:none;}

#footer {margin:20px 0 10px 0;padding:10px;text-align:center;border-top:1px solid #ddd;}
#footer p {font-size:9pt;margin:0;padding:0;margin:3px;}
#footer a:visited {color:#c53535;text-decoration:none;}
#footer a:link {color:#c53535;text-decoration:none;}
#footer a:hover {color:#c53535;text-decoration:none;}

#search_filter {margin-top:10px;}
#search_filter_footer {clear:both;}
.search-filter-container {float:left;margin-right:20px;height:30px;}
.search-filter-container span.header {font-weight:bold;font-size:9pt;color:#000;cursor:pointer;}
.search-filter-container span.label {cursor:pointer;}
#search_filter_toggle_button {display:none;}

#export_wrapper {}
#export_wrapper h3 {font-size:12pt;padding:3px;}
#export_image_wrapper {padding:3px;}
#export_button {padding:3px;}
#export_button p {color:red;margin-top:5px;}

#facebook_message_wrapper {margin-top:5px;}
#facebook_message_wrapper #facebook_message {width:250px;}

#init_loading_modal #init_loading_image{margin-top:20px;text-align:center;}
#init_loading_modal p{margin-top:15px;text-align:center;}
#facebook_loading_modal {background-color:black;}
#facebook_loading_modal #facebook_loading_image{margin-top:20px;text-align:center;}
#facebook_loading_modal p{margin-top:15px;text-align:center;}
.no-title .ui-widget-header {display:none;}
.ui-widget-header {font-family:"Arial" !important;font-weight:normal !important;}

/* facebook social plugin */
.fb-comments, .fb-comments iframe[style] {width: 100% !important;}
.fb-comments, .fb-comments span, .fb-comments.fb_iframe_widget span iframe {width: 100% !important;}
.fb-comments, .fb-comments.fb_iframe_widget iframe[style], .fb-comments.fb_iframe_widget span[style] {width: 100% !important;}

#course_detail_wrapper {width:100%;margin-top:5px;border-radius:4px;border:1px solid #aaa;background-color:#efefff;display:table;}
#course_detail_wrapper #course_detail_title {float:none;font-size:15px;font-weight:normal;margin:0px;padding:10px}
#course_detail_wrapper .remark {float:none;font-size:13px;font-weight:400;margin:0px;padding:10px}

#course_detail_info {width:100%;}
#course_detail_plan_button {width:120px;margin:10px}

.vcenter {
	display:table-cell;
	vertical-align: middle;
	float:none;
}

th {font-size:10px;}
@media (min-width:768px) {
	th {font-size:11.5px;}
}
@media (min-width:1024px) {
	th {font-size:13.5px;}
}

